--- a/Apps/fileMng/main.css
+++ b/Apps/fileMng/main.css
@@ -1,16 +1,20 @@
 
+.root-container {
+    display: flex;
+}
 
 .root-container .ui-container {
-    display: flex;
+    
     margin: 3px;
     /* width: content; */
-    flex-grow: 1; /* 나머지 빈공간 체워넣기 */
-    height: 512px;
+    /*flex-grow: 1; */ /* 나머지 빈공간 체워넣기 */
+    width : 512px;
+    height: 1024px;
     /* background-color: #f0f0f0; */
     overflow: auto;
 }
 
 .root-container .gl-container {
-    width: 512px;
-    height: 512px;
+    width: 1024px;
+    height: 768px;
 }
