--- a/Apps/metaWalker/main.css
+++ b/Apps/metaWalker/main.css
@@ -21,3 +21,24 @@ body {
 .hide {
     display: none;
 }
+
+#chatWindow {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 120px;
+    width: 50;
+    background: rgba(255, 255, 255, 0.5);
+}
+#chatWindow #chatList
+{
+    padding: 3px;
+    height: 200px;
+    overflow: auto;
+    background-color: rgba(255, 0, 255, 0.5);
+}
+#chatWindow #chatList li {
+    list-style-type: none;
+    color: greenyellow;
+    
+}
